out
rm -f dwm drw.o dwm.o util.o dwm-6.2.tar.gz
dwm build options:
CFLAGS   = -std=c99 -pedantic -Wall -Wno-deprecated-declarations -Os -I/usr/X11R6/include -I/usr/include/freetype2 -D_DEFAULT_SOURCE -D_BSD_SOURCE -D_POSIX_C_SOURCE=200809L -DVERSION="6.2" -DXINERAMA
LDFLAGS  = -L/usr/X11R6/lib -lX11 -lXinerama -lfontconfig -lXft
CC       = cc
cc -c -std=c99 -pedantic -Wall -Wno-deprecated-declarations -Os -I/usr/X11R6/include -I/usr/include/freetype2 -D_DEFAULT_SOURCE -D_BSD_SOURCE -D_POSIX_C_SOURCE=200809L -DVERSION=\"6.2\" -DXINERAMA drw.c
cc -c -std=c99 -pedantic -Wall -Wno-deprecated-declarations -Os -I/usr/X11R6/include -I/usr/include/freetype2 -D_DEFAULT_SOURCE -D_BSD_SOURCE -D_POSIX_C_SOURCE=200809L -DVERSION=\"6.2\" -DXINERAMA dwm.c
In file included from dwm.c:292:
config.h:114:57: error: called object is not a function or function pointer
  114 | static const char *scrotalltolcmd[]  = { "scrot", "-e", "‘mv $f  /mnt/data/SharedFiles/Pictures’" NULL };
      |                                                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
config.h:115:73: error: called object is not a function or function pointer
  115 | static const char *scrotalltoccmd[]  = { "scrot","/tmp/temp.png", "-e", "xclip -selection clipboard -t image/png -i $f" NULL };
      |                                                                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
config.h:115:73: warning: initialization of ‘const char *’ from incompatible pointer type ‘const char **’ [-Wincompatible-pointer-types]
config.h:115:73: note: (near initialization for ‘scrotalltoccmd[3]’)
config.h:115:73: error: initializer element is not constant
config.h:115:73: note: (near initialization for ‘scrotalltoccmd[3]’)
config.h:116:62: error: called object is not a function or function pointer
  116 | static const char *scrotpartolcmd[]  = { "scrot","-s", "-e", "‘mv $f  /mnt/data/SharedFiles/Pictures’" NULL };
      |                                                              ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
config.h:116:62: warning: initialization of ‘const char *’ from incompatible pointer type ‘const char **’ [-Wincompatible-pointer-types]
config.h:116:62: note: (near initialization for ‘scrotpartolcmd[3]’)
config.h:116:62: error: initializer element is not constant
config.h:116:62: note: (near initialization for ‘scrotpartolcmd[3]’)
config.h:117:79: error: called object is not a function or function pointer
  117 | static const char *scrotpartoccmd[]  = { "scrot","/tmp/temp.png", "-s", "-e", "xclip -selection clipboard -t image/png -i $f" NULL };
      |                                                                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
config.h:117:79: warning: initialization of ‘const char *’ from incompatible pointer type ‘const char **’ [-Wincompatible-pointer-types]
config.h:117:79: note: (near initialization for ‘scrotpartoccmd[4]’)
config.h:117:79: error: initializer element is not constant
config.h:117:79: note: (near initialization for ‘scrotpartoccmd[4]’)
config.h:117:20: warning: ‘scrotpartoccmd’ defined but not used [-Wunused-variable]
  117 | static const char *scrotpartoccmd[]  = { "scrot","/tmp/temp.png", "-s", "-e", "xclip -selection clipboard -t image/png -i $f" NULL };
      |                    ^~~~~~~~~~~~~~
config.h:115:20: warning: ‘scrotalltoccmd’ defined but not used [-Wunused-variable]
  115 | static const char *scrotalltoccmd[]  = { "scrot","/tmp/temp.png", "-e", "xclip -selection clipboard -t image/png -i $f" NULL };
      |                    ^~~~~~~~~~~~~~
In file included from config.h:70,
                 from dwm.c:292:
vanitygaps.c:132:1: warning: ‘incrivgaps’ defined but not used [-Wunused-function]
  132 | incrivgaps(const Arg *arg)
      | ^~~~~~~~~~
vanitygaps.c:121:1: warning: ‘incrihgaps’ defined but not used [-Wunused-function]
  121 | incrihgaps(const Arg *arg)
      | ^~~~~~~~~~
vanitygaps.c:110:1: warning: ‘incrovgaps’ defined but not used [-Wunused-function]
  110 | incrovgaps(const Arg *arg)
      | ^~~~~~~~~~
vanitygaps.c:99:1: warning: ‘incrohgaps’ defined but not used [-Wunused-function]
   99 | incrohgaps(const Arg *arg)
      | ^~~~~~~~~~
vanitygaps.c:88:1: warning: ‘incrogaps’ defined but not used [-Wunused-function]
   88 | incrogaps(const Arg *arg)
      | ^~~~~~~~~
vanitygaps.c:77:1: warning: ‘incrigaps’ defined but not used [-Wunused-function]
   77 | incrigaps(const Arg *arg)
      | ^~~~~~~~~
vanitygaps.c:66:1: warning: ‘incrgaps’ defined but not used [-Wunused-function]
   66 | incrgaps(const Arg *arg)
      | ^~~~~~~~
make: *** [Makefile:18: dwm.o] Error 1
